--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "node-telegram-bot-api": "^0.66.0",
     "p-queue": "^6.6.2",
     "puppeteer": "^24.15.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-recaptcha": "^3.6.8",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "queue": "^7.0.0",
     "tailwindcss": "^4.1.11"
   },
