--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "cheerio": "^1.1.2",
+    "chromedriver": "^138.0.5",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
@@ -34,6 +35,7 @@
     "puppeteer-extra-plugin-recaptcha": "^3.6.8",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "queue": "^7.0.0",
+    "selenium-webdriver": "^4.34.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
