--- a/package.json
+++ b/package.json
@@ -2,41 +2,20 @@
   "name": "currencies",
   "version": "1.0.0",
   "description": "Currency automation system with Telegram bot and web scraping",
-  "main": "s.js",
+  "main": "telegram-bot.js",
   "scripts": {
-    "start": "node src/server.js",
-    "bot": "node src/telegram-bot.js",
-    "dev": "nodemon src/server.js",
-    "dev:bot": "nodemon src/telegram-bot.js",
-    "admin": "node src/server.js & timeout 8 && start http://localhost:5000",
-    "build-react": "cd admin-frontend && npm run build",
-    "dev-react": "cd admin-frontend && npm start",
-    "setup": "npm install && cd admin-frontend && npm install && npm run build"
+    "start": "node telegram-bot.js",
+    "pfinance": "node pfinance.js",
+    "olymp": "node olymp.js",
+    "dev": "nodemon telegram-bot.js"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.8",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
-    "async": "^3.2.6",
     "axios": "^1.11.0",
-    "bootstrap": "^5.3.7",
-    "cheerio": "^1.1.2",
-    "chromedriver": "^138.0.5",
-    "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "express-ejs-layouts": "^2.5.1",
-    "mongodb": "^6.18.0",
-    "mongoose": "^8.16.4",
-    "node-cron": "^4.2.1",
     "node-telegram-bot-api": "^0.66.0",
-    "p-queue": "^6.6.2",
     "puppeteer": "^24.15.0",
     "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-recaptcha": "^3.6.8",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "queue": "^7.0.0",
-    "selenium-webdriver": "^4.34.0",
-    "tailwindcss": "^4.1.11"
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
