--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-telegram-bot-api": "^0.66.0",
     "puppeteer": "^24.15.0",
     "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-recaptcha": "^3.6.8",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
   "devDependencies": {
