--- a/package.json
+++ b/package.json
@@ -8,11 +8,7 @@
     "pfinance": "node pfinance.js",
     "olymp": "node olymp.js",
     "olymp-no-proxy": "cross-env USE_PROXY=false node olymp.js",
-    "dev": "nodemon telegram-bot.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false"
+    "dev": "nodemon telegram-bot.js"
   },
   "dependencies": {
     "axios": "^1.11.0",
@@ -24,9 +20,7 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
     "cross-env": "^10.0.0",
-    "jest": "^29.7.0",
     "nodemon": "^3.0.0"
   },
   "keywords": [
